# CnC_Renegade-linux

./: .gitignore  meson-setup-mingw.sh  meson.build  meson_options.txt  test_sdl3_audio
src/binkmovie/: BINKMovie.cpp  BINKMovie.h  binkmovie.h  meson.build  subtitlemanager.cpp  subtitlemanager.h  subtitleparser.cpp  subtitleparser.h
src/combat/: WeatherMgr.cpp  WeatherMgr.h  action.cpp  activeconversation.cpp  animcontrol.cpp  armedgameobj.cpp  backgroundmgr.cpp  basecontroller.cpp  basegameobj.cpp  beacongameobj.cpp  building.cpp  buildingaggregate.cpp  buildingmonitor.h  bullet.cpp  c4.cpp  ccamera.cpp  ccamera.h  cinematicgameobj.cpp  combat.cpp  combatsaveload.cpp  combatsound.cpp  conversation.cpp  cover.cpp  damage.cpp  damage.h  debug.cpp  debug.h  directinput.cpp  directinput.h  evasettings.h  ffactorylist.cpp  gameobjmanager.cpp  gameobjobserver.h  harvester.h  hud.cpp  humanstate.cpp  humanstate.h  input.cpp  mendozabossgameobj.cpp  meson.build  (+46 more)
src/commando/: AnnounceEvent.cpp  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  ConsoleMode.cpp  DlgDownload.cpp  DlgMPConnect.cpp  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgPasswordPrompt.cpp  DlgQuickmatch.cpp  DlgRestart.cpp  DlgWOLLogon.cpp  DlgWOLSettings.cpp  DlgWOLWait.cpp  DlgWebPage.cpp  FirewallWait.cpp  GameResSend.cpp  GameSpy_QnR.cpp  GameSpy_QnR.h  NAT.cpp  ServerSettings.cpp  WOLBuddyMgr.cpp  WOLChatMgr.cpp  WOLGameInfo.cpp  WOLJoinGame.cpp  WOLJoinGame.h  WOLLoginProfile.cpp  WOLLogonMgr.cpp  WOLQuickMatch.cpp  WebBrowser.cpp  WebBrowser.h  bandwidth.cpp  bandwidthcheck.cpp  bandwidthcheck.h  bandwidthgraph.cpp  bioevent.cpp  campaign.cpp  chat.rc  (+84 more)
src/platform/: linux_entry.cpp  meson.build  renegade_agent_log.h  renegade_init_log.h  renegade_nav_log.h  renegade_text_log.h  renegade_texture_log.h  sdl3_host.cpp  sdl3_host.h
src/scontrol/: meson.build  servercontrol.cpp
src/scripts/: DLLmain.cpp  Group.cpp  Group.h  GroupScript.cpp  Mission00.cpp  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission10.cpp  Mission11.cpp  MissionDemo.cpp  MissionX0.cpp  PRDemo.cpp  Test_BMG.cpp  Test_Cinematic.cpp  Test_DAK.cpp  Test_DAY.cpp  Test_DLS.cpp  Test_DME.cpp  Test_GTH.cpp  Test_JDG_EVA.cpp  Test_PDS.cpp  Test_RAD.cpp  Test_RMV.cpp  Test_RMV_Toolkit.cpp  Toolkit.cpp  Toolkit.h  Toolkit_Actions.cpp  Toolkit_Animations.cpp  Toolkit_Broadcaster.cpp  Toolkit_Explosions.cpp  Toolkit_Objectives.cpp  Toolkit_Objects.cpp  Toolkit_Powerup.cpp  Toolkit_Siege.cpp  (+45 more)
src/ww3d2/: agg_def.cpp  animobj.cpp  animobj.h  assetmgr.cpp  assetmgr.h  boxrobj.cpp  camera.h  collect.cpp  collect.h  dazzle.cpp  dazzle.h  ddsfile.cpp  ddsfile.h  dx8caps.cpp  dx8indexbuffer.cpp  dx8indexbuffer.h  dx8polygonrenderer.h  dx8renderer.cpp  dx8renderer.h  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8wrapper.cpp  dx8wrapper.h  dynamesh.cpp  framgrab.h  hanimmgr.cpp  hanimmgr.h  hcanim.cpp  hlod.cpp  hlod.h  hmorphanim.cpp  hrawanim.cpp  htree.cpp  htreemgr.cpp  linegrp.cpp  mesh.cpp  mesh.h  meshgeometry.cpp  meshgeometry.h  meshmatdesc.cpp  (+33 more)
src/ww3d2_vulkan/: meson.build  render_device.h  stb_texture.cpp  stb_texture.h  vk_2d_renderer.cpp  vk_2d_renderer.h  vk_allocator.cpp  vk_allocator.h  vk_buffer.cpp  vk_buffer.h  vk_check.h  vk_context.cpp  vk_context.h  vk_cpu_surface.cpp  vk_cpu_surface.h  vk_descriptor.cpp  vk_descriptor.h  vk_dx8_bridge.cpp  vk_dx8_bridge.h  vk_dx8_state.cpp  vk_dx8_state.h  vk_dx8_texture.cpp  vk_dx8_texture.h  vk_format.cpp  vk_format.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_gpu_buffer.cpp  vk_gpu_buffer.h  vk_native_render_state.cpp  vk_native_render_state.h  vk_pipeline.cpp  vk_pipeline.h  vk_platform.h  vk_render_pass.cpp  vk_render_pass.h  vk_renderer.cpp  vk_renderer.h  vk_shader.cpp  vk_shader.h  (+12 more)
src/wwaudio/: AudibleSound.cpp  AudibleSound.h  AudioEvents.h  AudioSaveLoad.cpp  FilteredSound.cpp  Listener.cpp  PriorityVector.h  Process.h  Sound3D.cpp  Sound3D.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.h  Threads.cpp  Utils.h  WWAudio.cpp  WWAudio.h  aabtreesoundcullclass.h  audiblesound.cpp  audiblesound.h  audiosaveload.cpp  filteredsound.cpp  filteredsound.h  listener.cpp  listener.h  logicallistener.cpp  logicallistener.h  logicalsound.cpp  logicalsound.h  meson.build  mss_stub.h  mss_stubs.cpp  priorityvector.h  sdl3_audio.cpp  sound2dhandle.cpp  sound2dhandle.h  sound3d.cpp  sound3d.h  (+23 more)
src/wwbitpack/: BitPacker.cpp  bitstream.cpp  bitstream.h  meson.build
src/wwdebug/: meson.build  wwdebug.cpp  wwdebug.h  wwmemlog.cpp  wwmemlog.h  wwprofile.cpp  wwprofile.h
src/wwlib/: Except.h  FastAllocator.h  always.h  binheap.h  bittype.h  bool.h  chunkio.cpp  chunkio.h  cpudetect.cpp  crc.h  critsection.cpp  critsection.h  cross_mingw32.paths.txt  data.cpp  ffactory.cpp  gcc.h  iff.h  ini.cpp  ini.h  int.cpp  keyboard.cpp  lcw.cpp  lcw.h  mempool.h  meson.build  mingw-static-pthread.specs  mixfile.cpp  mixfile.h  mpu.cpp  msgloop.cpp  msgloop.h  mutex.cpp  mutex.h  osdep.h  point.h  rawfile.cpp  rawfile.h  realcrc.cpp  registry.cpp  sha.cpp  (+15 more)
src/wwmath/: colmathaabox.cpp  colmathaabox.h  colmathobbobb.cpp  colmathobbtri.cpp  gridcull.h  lookuptable.cpp  lookuptable.h  meson.build  quat.h  vehiclecurve.cpp
src/wwnet/: connect.cpp  connect.h  meson.build  netutil.cpp  networkobject.h  packetmgr.cpp  singlepl.cpp  singlepl.h
src/wwonline/: GameResField.cpp  GameResPacket.cpp  PingProfile.cpp  RefPtr.h  WOLChannel.cpp  WOLChannel.h  WOLChatMsg.cpp  WOLChatMsg.h  WOLChatObserver.cpp  WOLChatObserver.h  WOLConnect.cpp  WOLConnect.h  WOLDownload.h  WOLErrorUtil.cpp  WOLGameOptions.h  WOLLadder.cpp  WOLLadder.h  WOLLoginInfo.cpp  WOLLoginInfo.h  WOLNetUtilObserver.h  WOLPageMsg.cpp  WOLProduct.cpp  WOLServer.cpp  WOLServer.h  WOLSession.cpp  WOLSession.h  WOLSquad.h  WOLUser.cpp  WOLUser.h  WaitCondition.cpp  WaitCondition.h  meson.build
src/wwphys/: Path.cpp  Pathfind.cpp  PathfindPortal.cpp  PathfindSectorBuilder.cpp  lightsolve.cpp  meson.build  movephys.cpp  octbox.cpp  pathmgr.cpp  (+22 more)
(+1210 files in other folders)
