option('wwprofile', type : 'boolean', value : false,
  description : 'Linux: enable WWPROFILE instrumentation (-DRENEGADE_WWPROFILE) for in-game profiler')

option('disable_audio', type : 'boolean', value : false,
  description : 'Temporary: skip WWAudio init/update and sound creation (-DRENEGADE_DISABLE_AUDIO)')

option('platform', type : 'combo',
  choices : ['windows', 'linux'],
  value : 'windows',
  description : 'Target OS: windows (MinGW cross) or linux (native SDL3 + dxvk-native)')

option('wwaudio_backend', type : 'combo',
  choices : [     'mss'],
  value : 'mss',
  description : 'WWAudio backend: mss (Miles stubs) or sdl3 (SDL3 audio)')

option('graphics_backend', type : 'combo',
  choices : ['vulkan'],
  value : 'vulkan',
  description : 'Linux WW3D2 renderer: native Vulkan (ww3d2_vulkan)')

option('saveload_debug', type : 'boolean', value : false,
  description : 'Enable verbose save/load debug logging to saveload_debug.txt')
